--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
         </section>
         <!-- happy clients -->
         <section class="my-24">
-            <h3 class="text 5xl mb-12 font-semibold text-center">Happy <span class="text-bike-primary">Clients
-                    says</span></h3>
+            <h1 class="text 5xl mb-12 font-semibold text-center">Happy <span class="text-bike-primary">Clients
+                    says</span></h1>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 ">
                 <!-- first review -->
                 <div class="card w-96 bg-base-100 p-9 border border-gray-400">
@@ -294,9 +294,85 @@
             </div>
 
         </section>
+        <!-- FAQ -->
+        <section class="my-24">
+            <h3 class="text text-5xl mb-12 font-semibold text-center">Frequently Asked <span class="text-bike-primary">Questions</span></h3>
+            <div class="hero">
+                <div class="hero-content flex-col lg:gap-24 lg:flex-row">
+                  <img src="images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
+                  <div>
+                    <!-- first question -->
+                    <div class="collapse collapse-arrow ">
+                        <input type="radio" name="my-accordion-2" checked="checked" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            What are the most important things I should
+                            know about riding a bike?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow ">
+                        <input type="radio" name="my-accordion-2" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            How can I tell if my helmet is old and I need a 
+                            new one?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>hello</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow ">
+                        <input type="radio" name="my-accordion-2" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            ow can I tell if my helmet is old and I need a 
+                            new one?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>hello</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow ">
+                        <input type="radio" name="my-accordion-2" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            ow can I tell if my helmet is old and I need a 
+                            new one?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>hello</p>
+                        </div>
+                      </div>
+                      <div class="collapse collapse-arrow ">
+                        <input type="radio" name="my-accordion-2" /> 
+                        <div class="collapse-title text-xl font-medium">
+                            ow can I tell if my helmet is old and I need a 
+                            new one?
+                        </div>
+                        <div class="collapse-content"> 
+                          <p>hello</p>
+                        </div>
+                      </div>
+                  </div>
+                </div>
+              </div>
+
+        </section>
 
     </main>
     <footer>
+        <footer class="footer p-10 bg-neutral text-neutral-content">
+            <aside>
+              
+              <p>ACME Industries Ltd.<br/>Providing reliable tech since 1992</p>
+            </aside> 
+            <nav>
+              <header class="footer-title">Social</header> 
+              <div class="grid grid-cols-1 gap-4">
+                <a><img class="w-36" src="images/others/android.png" alt=""></a>
+                <a><img class="w-36" src="images/others/ios.png" alt=""></a>
+              </div>
+            </nav>
+          </footer>
 
     </footer>
 
